--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -4,5 +4,5 @@ lead_title: "General inquiries"
 lead_text: "Reach out to the organizers with questions about submissions, sponsorship, or program."
 primary_label: "Email organizers"
 primary_href: "mailto:amit.h.agarwal@oracle.com"
-secondary_label: "Workshop proposal"
-secondary_href: "/files/GRAIL_WORKSHOP_CVPR_Accepted.pdf"
+secondary_label: "See updates"
+secondary_href: "/updates/"
