--- a/_data/inclusion.yml
+++ b/_data/inclusion.yml
@@ -2,7 +2,7 @@ eyebrow: "Diversity, inclusion, and ethics"
 title: "Building a responsible and global community"
 paragraphs:
   - "GRAIL-V prioritizes broad participation across geography, seniority, and institution type. We will circulate the CFP via WiCV, Black in AI, LatinX in AI, WiML, Deep Learning Indaba, and other community channels."
-  - "To support first-time and underrepresented authors, we plan light-touch clinics (pre-submission abstract checks and camera-ready polishing). We encourage clear reporting of grounding, calibration, and efficiency, plus licenses and provenance for released artifacts."
+  - "We encourage clear reporting of grounding, calibration, efficiency, and licenses for released artifacts to support responsible research."
 callout:
   title: "What we ask authors to provide"
   items:
