--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -1,14 +1,16 @@
 - name: "Amit Agarwal"
   org: "Oracle AI"
+  bio: "Builds agentic vision systems and retrieval pipelines with grounded evidence and data enrichment at scale."
   role: "General Chair, Agentic-Vision Systems and Data Enrichment"
   profile: ""
-  photo: ""
+  photo: "/assets/people/amit.jpg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?user=Mc9RC6QAAAAJ"
     linkedin: "https://www.linkedin.com/in/amitagarwal6/"
 - name: "Vivek Gupta"
   org: "Arizona State University"
+  bio: "Researches heterogeneous retrieval over structured and unstructured sources, focusing on robust, grounded search."
   role: "General Chair, Heterogeneous Retrieval (Structured Sources)"
   profile: ""
   photo: ""
@@ -18,54 +20,60 @@
     linkedin: "https://www.linkedin.com/in/keviv9/"
 - name: "Vivek Srikumar"
   org: "University of Utah"
+  bio: "Works on grounding, reliability, and structured prediction for language/vision systems."
   role: "Grounding and Reliability"
   profile: ""
-  photo: ""
+  photo: "/assets/people/vivek-srikumar.jpg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?user=TsTUfOIAAAAJ"
     linkedin: "https://www.linkedin.com/in/viveksrikumar/"
 - name: "Tao Sheng"
   org: "Oracle AI"
+  bio: "Focuses on agentic planning, tool use, and multimodal system integration for production deployments."
   role: "Agentic Planning and Tool Use"
   profile: ""
-  photo: ""
+  photo: "/assets/people/tao.jpeg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?user=HCUn94EAAAAJ&hl=en"
     linkedin: "https://www.linkedin.com/in/tao-sheng-729b6443/"
 - name: "Alice Oh"
   org: "KAIST"
+  bio: "Leads work on multilingual attribution, grounding, and socially responsible AI across modalities."
   role: "Attribution and Multilingual Tracks"
   profile: ""
-  photo: ""
+  photo: "/assets/people/aliceoh.jpg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?hl=en&user=B88-xMEAAAAJ&view_op=list_works"
     linkedin: "https://www.linkedin.com/in/alice-oh-4677544/"
 - name: "Sara Hooker"
   org: "Adaption Labs"
+  bio: "Researches efficient and responsible ML (distillation, compression) to make large models deployable."
   role: "Efficiency and Industry Liaison"
   profile: ""
-  photo: ""
+  photo: "/assets/people/SaraHooker5x4.jpg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?hl=en&user=2xy6h3sAAAAJ"
     linkedin: "https://www.linkedin.com/in/sararosehooker/"
 - name: "Jyotika Singh"
   org: "Oracle AI"
+  bio: "Works on agentic memory, data quality, and human-in-the-loop interaction for grounded systems."
   role: "Agentic Memory and Human Interaction"
   profile: ""
-  photo: ""
+  photo: "/assets/people/JyotikaSingh.jpg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?user=hvS68jYAAAAJ&hl=en&oi=ao"
     linkedin: "https://linkedin.com/in/jyotikasingh"
 - name: "Hitesh Patel"
   org: "Oracle AI"
+  bio: "Focuses on multilingual and multimodal responsible AI with grounded retrieval and safety."
   role: "Multilingual and Multimodal Responsible AI"
   profile: ""
-  photo: ""
+  photo: "/assets/people/hitesh.jpg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?hl=en&user=R3X_R9UAAAAJ"
