--- a/_data/program.yml
+++ b/_data/program.yml
@@ -1,39 +1,24 @@
 - time: "09:00 - 09:10"
   title: "Welcome and introduction"
   description: "Workshop overview and goals."
-- time: "09:10 - 09:50"
+- time: "09:10 - 09:40"
   title: "Keynote 1"
   description: "Grounded retrieval at scale."
-- time: "09:50 - 10:30"
+- time: "09:40 - 10:10"
   title: "Oral Session I"
   description: "3-4 short orals, 7-8 minutes each."
-- time: "10:30 - 11:00"
-  title: "Poster session and coffee break"
+- time: "10:10 - 10:30"
+  title: "Poster and demo break"
   description: "Posters, demos, and networking."
-- time: "11:00 - 11:40"
+- time: "10:30 - 11:00"
   title: "Keynote 2"
   description: "Evaluation and grounding in multimodal systems."
-- time: "11:40 - 12:00"
-  title: "Demos"
-  description: "Live systems with grounded evidence and tools."
-- time: "12:00 - 13:00"
-  title: "Lunch break"
-  description: "Continue discussions with speakers and organizers."
-- time: "13:00 - 13:45"
+- time: "11:00 - 11:30"
   title: "Panel"
   description: "From Retrieval to Action: What Should Agentic Vision Systems Verify?"
-- time: "13:45 - 14:30"
-  title: "Oral Session II"
-  description: "3-4 short orals, 7-8 minutes each."
-- time: "14:30 - 15:00"
-  title: "Keynote 3"
-  description: "Agentic tool use and safe deployment."
-- time: "15:00 - 15:30"
-  title: "Poster session and coffee break"
-  description: "Second poster and demo block."
-- time: "15:30 - 16:00"
-  title: "Keynote 4"
-  description: "Efficiency, cost, and energy-aware retrieval."
-- time: "16:30 - 17:00"
+- time: "11:30 - 12:10"
+  title: "Poster and demo spotlight"
+  description: "Second poster/demo block with invited highlights."
+- time: "12:10 - 12:30"
   title: "Awards and closing"
   description: "Best paper, demos, and closing remarks."
