--- a/_data/site.yml
+++ b/_data/site.yml
@@ -1,6 +1,7 @@
 announcement:
   pill: "Accepted"
   text: "CVPR 2026 Workshop in Denver, USA. CFP opens Jan 6, 2026 (AoE)."
+contact_email: "amit.h.agarwal@oracle.com"
 brand:
   name: "GRAIL-V"
   subtitle: "CVPR 2026"
@@ -8,32 +9,32 @@ seo:
   og_image: "/assets/og-image.png"
 hero:
   eyebrow: "Grounded Retrieval and Agentic Intelligence for Vision-Language"
-  title: "GRAIL-V puts evidence at the center of"
-  highlight: "plan, retrieve, rerank, verify"
-  lead: "A CVPR 2026 workshop dedicated to grounded multimodal retrieval, reranking, and verification for agentic vision systems across images, video, documents, charts, and UI."
+  title: "Grounded evidence for vision-language agents"
+  highlight: "plan > retrieve > rerank > verify"
+  lead: "A CVPR 2026 workshop for researchers and practitioners building grounded multimodal retrieval, reranking, and verification systems that can be deployed with confidence."
   ctas:
     - label: "Submit Paper"
       href: "/cfp/#submit"
       style: "primary"
-    - label: "Read the Proposal"
-      href: "/files/GRAIL_WORKSHOP_CVPR_Accepted.pdf"
+    - label: "Key Dates"
+      href: "/cfp/#dates"
       style: "ghost"
-    - label: "Join Mailing List"
+    - label: "Contact"
       href: "mailto:amit.h.agarwal@oracle.com?subject=GRAIL-V%20interest"
       style: "ghost"
   metrics:
-    - value: "100-300"
-      label: "Expected attendees"
+    - value: "Who"
+      label: "CV/IR/NLP/HCI researchers building grounded agents"
+      href: "/topics/#topics"
+    - value: "Format"
+      label: "Keynotes · orals · posters/demos · panel"
+      href: "/program/#program"
+    - value: "Where"
+      label: "Denver, USA · in-person + hybrid"
       href: "/venue/#venue"
-    - value: "4"
-      label: "Keynotes"
-      href: "/speakers/#speakers"
-    - value: "2"
-      label: "Oral sessions"
-      href: "/program/#program"
-    - value: "2"
-      label: "Poster and demo blocks"
-      href: "/program/#program"
+    - value: "When"
+      label: "Key dates and deadlines"
+      href: "/cfp/#dates"
   countdowns:
     - label: "Submission deadline"
       text: "Mar 5, 2026 (AoE)"
