--- a/_data/sponsorship.yml
+++ b/_data/sponsorship.yml
@@ -1,6 +1,6 @@
 eyebrow: "Sponsorship"
 title: "Support a high-impact workshop"
-paragraph: "We welcome sponsorship to support travel grants, student awards, and demo infrastructure. Oracle sponsorship is currently under discussion."
+paragraph: "We welcome sponsorship to support travel grants, student awards, and demo infrastructure."
 cta:
   label: "Sponsor GRAIL-V"
   href: "mailto:amit.h.agarwal@oracle.com?subject=GRAIL-V%20sponsorship"
