--- a/_data/submission.yml
+++ b/_data/submission.yml
@@ -1,6 +1,12 @@
-eyebrow: "Call for Papers"
-title: "Submit to GRAIL-V at CVPR 2026"
+eyebrow: "Submission"
+title: "Submission details"
 lead: "We invite archival papers and demos on grounded multimodal retrieval, reranking, and verification for agentic vision systems. We especially welcome work that reports grounded evidence (region/page/moment), calibration or abstention behavior, and real deployment constraints (latency, memory, cost)."
+summary:
+  title: "Submission at a glance"
+  bullets:
+    - "CVPR format, double-blind, up to 8 pages (references excluded)."
+    - "Grounded evidence + efficiency metrics strongly encouraged."
+    - "OpenReview link posted when the CFP opens."
 checklist:
   - "Format: CVPR template, up to 8 pages (references excluded)."
   - "Review: double-blind on OpenReview with 3 reviews + AC oversight."
@@ -9,30 +15,30 @@ checklist:
 paper_types:
   - title: "Archival paper"
     description: "Up to 8 pages (references excluded), CVPR template, double-blind review, appears in workshop proceedings."
-  - title: "Non-archival short paper"
-    description: "Early ideas, negative results, or systems reports (mark clearly as non-archival)."
+  - title: "Archival short paper"
+    description: "Early or in-progress ideas that will appear in the CVPR workshop proceedings."
   - title: "Demo / system paper"
     description: "Working systems with grounded evidence, evaluation, and reproducible artifacts."
   - title: "Benchmark / dataset"
     description: "New tasks, datasets, or evaluation harnesses for grounded retrieval and verification."
 how_to_submit:
-  - title: "Write and anonymize"
-    description: "Use the CVPR template; remove author identities; include ethics statement if needed."
-  - title: "Show evidence + efficiency"
-    description: "Report region/page/moment grounding, calibration/abstention behavior, and deployment constraints."
-  - title: "Add artifacts (encouraged)"
-    description: "Link code/data/models with licenses and provenance; include a lightweight reproducibility note."
+  - title: "Follow CVPR rules"
+    description: "Use the CVPR 2026 author guidelines (template, anonymization, ethics): https://cvpr.thecvf.com/Conferences/2026/AuthorGuidelines"
+  - title: "Show grounding & efficiency"
+    description: "Include region/page/moment evidence, calibration/abstention, and real deployment constraints."
+  - title: "Include artifacts (encouraged)"
+    description: "Link code/data/models with licenses and provenance."
   - title: "Submit on OpenReview"
     description: "Use the workshop forum (link posted when CFP opens)."
-  - title: "Camera-ready + present"
-    description: "Finalize after reviews; at least one author presents in person (CVPR policy)."
+  - title: "Present at the workshop"
+    description: "Camera-ready after reviews; at least one author presents in person per CVPR policy."
 portal:
   title: "Submission portal"
   description: "The OpenReview forum link will appear here when the CFP opens."
   primary_label: "OpenReview (TBA)"
   primary_href: "#"
-  secondary_label: "Workshop proposal PDF"
-  secondary_href: "/files/GRAIL_WORKSHOP_CVPR_Accepted.pdf"
+  secondary_label: ""
+  secondary_href: ""
 policies:
   - title: "Review criteria"
     description: "Technical merit, grounded evaluation, efficiency, reproducibility, and broader safety considerations."
