--- a/_data/venue.yml
+++ b/_data/venue.yml
@@ -1,11 +1,12 @@
 eyebrow: "Venue and logistics"
 title: "In-person with hybrid support"
+lead: "An in-person workshop with hybrid support; registration and accessibility details follow CVPR guidance and will be posted here."
 items:
   - title: "Location"
-    description: "CVPR 2026, Denver, USA. Workshop dates: Jun 3-4, 2026."
+    description: "Denver, USA. Workshop dates: Jun 3-4, 2026."
   - title: "Hybrid plan"
-    description: "CVPR Zoom room for remote keynotes and live moderated Q and A."
-  - title: "Session staffing"
-    description: "Session chairs, A/V liaison, hybrid moderator, and poster lead."
+    description: "Hybrid participation follows CVPR guidance; details will be posted when available."
+  - title: "Registration"
+    description: "Registration is handled via CVPR. We will link the official registration page when it opens."
   - title: "Accessibility"
     description: "Reserved front-row seating, mic runners, captioning support."
