--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,12 +1,14 @@
 - date: "Jan 6, 2026"
   title: "Call for Papers posted"
-  description: "CFP opens with submission details and reviewer signup."
+  description: "CFP opens with submission details and topics."
+  internal: true
 - date: "Mar 5, 2026"
   title: "Paper submission deadline"
   description: "OpenReview submission closes at 23:59 AoE."
 - date: "Mar 20-22, 2026"
   title: "Author response (optional)"
   description: "Lightweight rebuttal window to clarify factual issues."
+  internal: true
 - date: "Mar 28, 2026"
   title: "Notification to authors"
   description: "Decisions released via OpenReview."
@@ -16,6 +18,7 @@
 - date: "Apr 18, 2026"
   title: "Final program due"
   description: "Schedule and speaker lineup finalized."
+  internal: true
 - date: "Jun 3-4, 2026"
   title: "Workshop day in Denver, USA"
   description: "Full-day program with keynotes, panels, and posters."
