--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,9 +1,11 @@
 - name: "Kristen Grauman"
   org: "University of Texas at Austin"
   focus: "Video understanding, long-horizon grounding"
+  bio: "Leads work on egocentric video understanding and retrieval at scale, with a focus on long-horizon grounding and efficient perception."
   initials: "KG"
+  publish: true
   profile: ""
-  photo: ""
+  photo: "/assets/people/kristen.jpg"
   links:
     home: "https://www.cs.utexas.edu/~grauman/"
     scholar: "https://scholar.google.com/citations?user=Jp6Mz1sAAAAJ&hl=en"
@@ -11,9 +13,11 @@
 - name: "Mohit Bansal"
   org: "University of North Carolina at Chapel Hill"
   focus: "Multimodal generation, agentic reasoning"
+  bio: "Researches multimodal language/vision agents, grounded reasoning, and controllable generation for real-world tasks."
   initials: "MB"
+  publish: true
   profile: ""
-  photo: ""
+  photo: "/assets/people/mohitbansal2025.png"
   links:
     home: "https://www.cs.unc.edu/~mbansal/"
     scholar: "https://scholar.google.com/citations?hl=en&user=DN8QtscAAAAJ&view_op=list_works"
@@ -21,9 +25,11 @@
 - name: "Yunyao Li"
   org: "Adobe"
   focus: "Knowledge graphs, enterprise retrieval"
+  bio: "Builds robust enterprise retrieval systems combining knowledge graphs and multimodal signals for production-scale applications."
   initials: "YL"
+  publish: true
   profile: ""
-  photo: ""
+  photo: "/assets/people/yunyaoli.jpeg"
   links:
     home: "https://yunyaoli.github.io/"
     scholar: "https://scholar.google.com/citations?hl=en&user=u5LmeasAAAAJ&view_op=list_works&sortby=pubdate"
@@ -31,9 +37,11 @@
 - name: "Dan Roth"
   org: "University of Pennsylvania / Oracle AI"
   focus: "Grounded reasoning, robust inference"
+  bio: "Pioneer in structured, grounded reasoning and robust inference for language/vision systems deployed in real settings."
   initials: "DR"
+  publish: true
   profile: ""
-  photo: ""
+  photo: "/assets/people/dan_roth.jpg"
   links:
     home: "https://www.cis.upenn.edu/~danroth/"
     scholar: "https://scholar.google.com/citations?hl=en&user=E-bpPWgAAAAJ"
@@ -41,9 +49,11 @@
 - name: "Nil Reimers"
   org: "Cohere"
   focus: "Dense embeddings, multimodal search"
+  bio: "Created Sentence Transformers and advances dense embeddings and late-interaction models for multilingual and multimodal search."
   initials: "NR"
+  publish: true
   profile: ""
-  photo: ""
+  photo: "/assets/people/nils_reimers_22_415x415.jpg"
   links:
     home: "https://www.nils-reimers.de/"
     scholar: "https://scholar.google.com/citations?user=57GA3A8AAAAJ&hl=en"
@@ -51,9 +61,11 @@
 - name: "Iryna Gurevych"
   org: "Technical University of Darmstadt"
   focus: "Evaluation methodology, multilingual resources"
+  bio: "Leads research on evaluation methodology, multilingual resources, and grounded NLP systems with reproducible benchmarks."
   initials: "IG"
+  publish: true
   profile: ""
-  photo: ""
+  photo: "/assets/people/Iryna-Gurevych_Ruediger-Dunker_2022_1zu1_415x415.png"
   links:
     home: "https://www.informatik.tu-darmstadt.de/ukp/ukp_home/head_ukp/index.en.jsp"
     scholar: "https://scholar.google.com/citations?user=t3A39e8AAAAJ&hl=en"
@@ -61,9 +73,11 @@
 - name: "Scott Wen-Tau Yih"
   org: "Meta"
   focus: "Efficient retrieval, multi-hop QA"
+  bio: "Works on efficient retrieval and multi-hop QA, designing retrieval-augmented architectures that balance latency and quality."
   initials: "SY"
+  publish: true
   profile: ""
-  photo: ""
+  photo: "/assets/people/Scott%20Yih_FB%20Small.jpg"
   links:
     home: "https://scottyih.org/"
     scholar: "https://scholar.google.com/citations?hl=en&user=8rDNIMsAAAAJ"
@@ -72,3 +86,4 @@
   name: "Panel"
   org: "From Retrieval to Action: What Should Agentic Vision Systems Verify?"
   focus: "Diverse perspectives across industry and academia."
+  publish: true
