Updated email id and picture

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,6 +3,6 @@ title: "Stay connected"
 lead_title: "General inquiries"
 lead_text: "Reach out to the organizers with questions about submissions, sponsorship, or program."
 primary_label: "Email organizers"
-primary_href: "mailto:amit.h.agarwal@oracle.com"
+primary_href: "mailto:grailworkshops@googlegroups.com"
 secondary_label: "See updates"
 secondary_href: "/updates/"
