--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -13,7 +13,7 @@
   bio: "Researches heterogeneous retrieval over structured and unstructured sources, focusing on robust, grounded search."
   role: "General Chair, Heterogeneous Retrieval (Structured Sources)"
   profile: ""
-  photo: ""
+  photo: "/assets/people/vivek-gupta.jpg"
   links:
     home: ""
     scholar: "https://scholar.google.com/citations?user=Bs5H0S4AAAAJ&hl=en"
