--- a/_data/sponsorship.yml
+++ b/_data/sponsorship.yml
@@ -3,5 +3,5 @@ title: "Support a high-impact workshop"
 paragraph: "We welcome sponsorship to support travel grants, student awards, and demo infrastructure."
 cta:
   label: "Sponsor GRAIL-V"
-  href: "mailto:amit.h.agarwal@oracle.com?subject=GRAIL-V%20sponsorship"
+  href: "mailto:grailworkshops@googlegroups.com?subject=GRAIL-V%20sponsorship"
   description: "Email the organizers to request sponsorship tiers and benefits."
