Changes to footer and header

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -1,5 +1,5 @@
 announcement:
-  pill: "Accepted"
+  pill: ""
   text: "CVPR 2026 Workshop in Denver, USA. CFP opens Jan 6, 2026 (AoE)."
 contact_email: "grailworkshops@googlegroups.com"
 brand:
