--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,10 @@
   href: "/program/"
 - label: "Speakers"
   href: "/speakers/"
+- label: "Organizers"
+  href: "/speakers/#organizers"
+- label: "Program Committee"
+  href: "/speakers/#committee"
 - label: "Venue"
   href: "/venue/"
 - label: "Updates"
