--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -177,7 +177,7 @@
     linkedin: "https://www.linkedin.com/in/kous2v/"
     scholar: "https://scholar.google.com/citations?user=tipePDkAAAAJ&hl=en&oi=ao"
 - name: "Peerat Limkonchotiwat"
-  affiliation: "AI Singapore / NUS"
+  affiliation: ""
   focus: "SEA LLMs, benchmarks, and safety for multilingual and multimodal systems."
   bio: "Research Fellow at AI Singapore, NUS. Leads SEA-LION, SEA-HELM, and SEA-Guard; collaborates on LLM, multimodal, safety, and dataset research. Contributor to SEACrowd and SEA-VL; invited researcher at Chulalongkorn University and SIGSEA advisory board member."
   photo: "/assets/people/peerat.jpg"
