--- a/_data/site.yml
+++ b/_data/site.yml
@@ -7,6 +7,56 @@ brand:
   subtitle: "CVPR 2026"
 seo:
   og_image: "/assets/og-image.png"
+  keywords:
+    - "CVPR 2026"
+    - "workshop"
+    - "CVPR workshop"
+    - "CVPR 2026 workshop"
+    - "CVPR 2026 workshops"
+    - "call for papers"
+    - "CFP"
+    - "workshop CFP"
+    - "workshop call for papers"
+    - "OpenReview"
+    - "paper submission"
+    - "camera-ready"
+    - "workshop submissions"
+    - "computer vision"
+    - "vision-language models"
+    - "VLM"
+    - "multimodal AI"
+    - "multimodal learning"
+    - "information retrieval"
+    - "IR"
+    - "retrieval-augmented generation"
+    - "RAG"
+    - "dense retrieval"
+    - "sparse retrieval"
+    - "hybrid search"
+    - "cross-encoder"
+    - "reranking"
+    - "grounding"
+    - "provenance"
+    - "citation"
+    - "verification"
+    - "calibration"
+    - "benchmark"
+    - "datasets"
+    - "vision-language"
+    - "multimodal retrieval"
+    - "agentic AI"
+    - "grounded retrieval"
+    - "multimodal agents"
+    - "reranking"
+    - "evidence verification"
+    - "vision-language workshop"
+    - "multimodal workshop"
+    - "retrieval workshop"
+    - "agentic vision"
+    - "grounded AI"
+  event_start: "2026-06-03"
+  event_end: "2026-06-04"
+  event_location: "Denver, CO, USA"
 hero:
   # eyebrow: "Grounded Retrieval and Agentic Intelligence for Vision-Language"
   # title: "Grounded evidence for vision-language agents"
